--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 
 	<script src="https://cdn.90so.net/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdn.90so.net/layui/2.4.5/layui.all.js"></script>
+	<script src="https://blog.bflyer.com/web-commons/lib.js"></script>
 	<script src="./jQuery-mergeableTable.js"></script>
 	<script>
 	$(function(){
